tests/NormalTests/paczka1/small_fuzzy/86882980.err
Error in line 2: ZyX1vNPsW0 S148 71,6
Error in line 7: ZyX1vNPsW0 A568 37,6
